ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipnews
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # - host: localhost
  - http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: zipnews-api-svc
            port:
              number: 5005
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: zipnews-ui-svc
            port:
              number: 3000
